src/styles.css
body {
    margin: 0;
    background-color: #000;
    color: #fff;
    font-family: Monospace;
    font-size: 13px;
    line-height: 24px;
    overscroll-behavior: none;
}

a {
    color: #ff0;
    text-decoration: none;
}

a:hover, .copy-email:hover {
    text-decoration: underline;
}

button {
    cursor: pointer;
    text-transform: uppercase;
}

#info-container {
    position: absolute;
    top: 58px;
    left: 10px;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    overflow: hidden;
    z-index: 1;
    pointer-events: auto;
}

#info-header {
    padding: 10px;
    background: rgba(0, 0, 0, 0.7);
    cursor: pointer;
    color: #ff0;
    text-align: center;
}

#info-content {
    padding: 10px;
    display: none; /* Hide by default */
    text-align: center;
}

#tips-container {
    position: absolute;
    left: 10px;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    overflow: hidden;
    z-index: 1;
    pointer-events: auto;
}

#tips-header {
    padding: 10px;
    background: rgba(0, 0, 0, 0.7);
    cursor: pointer;
    color: #ff0;
    text-align: center;
}

#tips-content {
    padding: 10px;
    display: none; /* Hide by default */
    text-align: center;
}

.copy-email {
    color: #ff0;
    cursor: pointer;
    text-decoration: none;
}

.lil-gui {
    z-index: 2 !important;
}

@media all and (max-width: 640px) {
    .lil-gui.root {
        right: auto;
        top: auto;
        max-height: 50%;
        max-width: 80%;
        bottom: 0;
        left: 0;
    }
}

#overlay {
    position: absolute;
    font-size: 16px;
    z-index: 2;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background: rgba(0, 0, 0, 0.7);
}

#overlay button {
    background: transparent;
    border: 0;
    border: 1px solid rgb(255, 255, 255);
    border-radius: 4px;
    color: #ffffff;
    padding: 12px 18px;
    text-transform: uppercase;
    cursor: pointer;
}

#notSupported {
    width: 50%;
    margin: auto;
    background-color: #f00;
    margin-top: 20px;
    padding: 10px;
}

#loadingScreen {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #000;
    color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 9999;
}
#loadingText {
    margin-bottom: 20px;
}
#loadingBarContainer {
    width: 80%;
    height: 20px;
    background-color: #444;
    border-radius: 10px;
    overflow: hidden;
}
#loadingBar {
    width: 0;
    height: 100%;
    background-color: #0f0;
    border-radius: 10px;
}

